# PFC

ballistic-analysis/: .env  README_genesis_integration.md  README_simplified.md  environment.yml  setup.py
ballistic-analysis/cpp-integration/: CMakeLists.txt  build_wrapper.sh  genesis_wrapper.cpp  genesis_wrapper.h
ballistic-analysis/data/: pdf-extractor.py
ballistic-analysis/data/processed/: fire_tables_test.csv  fire_tables_train.csv  standardized_fire_tables.csv  unified_fire_tables.csv
ballistic-analysis/data/source/: Tabelas De Tiro - FT 155-AR1-PART1.csv  Tabelas De Tiro - FT 155-AR1-PART2.csv
ballistic-analysis/genesis-files/CalculadorNumerico/: atmosfera.ii  atmosfera.s  atmosferaconstante.ii  atmosferaconstante.s  atmosferaicao.ii  atmosferaicao.s  atmosferaisa.ii  atmosferaisa.s  atmosferausstandard.ii  atmosferausstandard.s  ballisticKernel.depend  ballisticKernel.layout  calculador.ii  calculador.s  calculadorArrastoLinear.ii  calculadorArrastoLinear.s  calculadorAtmosferico.ii  calculadorAtmosferico.s  calculadorNumerico.cbp  calculadorNumerico.depend  calculadorNumerico.layout  calculadorPontoMassa.ii  calculadorPontoMassa.s  calculadorPontoMassaModificado.ii  calculadorPontoMassaModificado.s  calculadorPontoMassaModificado1990.ii  calculadorPontoMassaModificado1990.s  calculadorVacuo.ii  calculadorVacuo.s  coeficienteAerodinamico.ii  coeficienteAerodinamico.s  coeficienteDrag.ii  (+50 more)
ballistic-analysis/results/: calculated_ballistic_table.csv  model_comparison_data.csv
ballistic-analysis/src/: README.md  ballist-calculator.py  ballistic_simulation.py  chart_utils.py  convert_fire_tables.py  dataset_utils.py  graphics_utils.py  main.py  split_fire_tables.py
(+465 files in other folders)
